<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <ImageView
        android:id="@+id/gendalfImageView"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:src="@drawable/gendalf_75230256_orig_"
        app:layout_constraintBottom_toTopOf="@+id/secondActivityTextview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/secondActivityTextview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/second_activity"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gendalfImageView"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/quoteTextview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/secondActivityTextview"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/btnFirstActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/btn_first_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quoteTextview" />

    <Button
        android:id="@+id/btnThirdActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/btn_third_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnFirstActivity" />

</androidx.constraintlayout.widget.ConstraintLayout>